<resources>
    <string name="app_name">MovieSearch</string>
    <string name="poster_description">Постер фильма</string>
    <string name="movie_name">Название фильма</string>
    <string name="release_date">Дата выхода</string>
    <string name="rating">Рейтинг</string>
    <string name="genre">Жанр</string>
    <string name="description">Описание</string>
    <string name="release_year">Год выхода</string>
</resources>